--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,9 +22,9 @@ jobs:
         run: |
           echo "Functional Testing is going on"
           sleep 5
-  security-testing:
+  component-analysis:
     runs-on: ubuntu-latest
-    
+    continue-on-error: true
     needs: functional-testing
     steps:
       - name: Checkout the Code
@@ -35,7 +35,7 @@ jobs:
 
       - name: Perform Node.js Audit and Output to Json file
         run: npm audit --json >> node-audit-results.json
-        continue-on-error: true
+        
 
       - name: List the files available
         run: ls
@@ -46,11 +46,27 @@ jobs:
           name: NodeAudit
           path: node-audit-results.json
         if: always()
-        continue-on-error: true
+        
+  frontend-static-scan:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    needs: functional-testing
+    steps:
+      - name: Checkout the Code
+      - uses: actions/checkout@v2
 
+      - name: install npm
+        run: npm install
+
+      - name: install retire
+        run: npm install -g retire
+
+      - name: run retire
+        run: retire
+      
   deployment:
     runs-on: ubuntu-latest    
-    needs: security-testing
+    needs: component-analysis
     steps: 
       - name: Deployment Steps
         run: |
