--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,8 +23,7 @@ jobs:
           echo "Functional Testing is going on"
           sleep 5
   component-analysis:
-    runs-on: ubuntu-latest
-    continue-on-error: true
+    runs-on: ubuntu-latest    
     needs: functional-testing
     steps:
       - name: Checkout the Code
@@ -35,7 +34,7 @@ jobs:
 
       - name: Perform Node.js Audit and Output to Json file
         run: npm audit --json >> node-audit-results.json
-        
+        continue-on-error: true
 
       - name: List the files available
         run: ls
@@ -59,7 +58,15 @@ jobs:
 
       - run: npm install -g retire
 
-      - run: retire
+      - run: retire --outputformat json --outputpath retirejs-report.json --severity high
+        continue-on-error: true
+
+      - name: Upload the Output as an artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: RetireJS Output
+          path: retirejs-report.json
+        if: always()
         
       
   deployment:
