--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,7 +71,7 @@ jobs:
       
   deployment:
     runs-on: ubuntu-latest    
-    needs: component-analysis
+    needs: [component-analysis, frontend-static-scan]
     steps: 
       - name: Deployment Steps
         run: |
